--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 <img
                   class="screenshot-rectangle-icon"
                   alt=""
-                  src="./public/screenshot-rectangle.svg"
+                  src="Screenshot-rectangle.svg"
                 />
               </div>
               <img
                 class="screenshot-2024-02-27-154934-r-icon"
                 alt=""
-                src="./public/screenshot-20240227-154934removebgpreview-1@2x.png"
+                src="Screenshot_2024-02-27_154934-removebg-preview.png"
               />
             </div>
           </div>
@@ -94,14 +94,14 @@
               class="screenshot-2024-02-27-154947-r-icon"
               loading="lazy"
               alt=""
-              src="./public/screenshot-20240227-154947removebgpreview-1@2x.png"
+              src="Screenshot-20240227-154947removebgpreview-1@2x.png"
             />
           </div>
           <img
             class="screenshot-2024-02-27-154951-r-icon"
             loading="lazy"
             alt=""
-            src="./public/screenshot-20240227-154951removebgpreview-1@2x.png"
+            src="Screenshot-20240227-154951removebgpreview-1@2x.png"
           />
         </header>
         <div class="text">
@@ -141,7 +141,7 @@
           class="screenshot-2024-02-27-154426-r-icon"
           loading="lazy"
           alt=""
-          src="./public/screenshot-20240227-154426removebgpreview-1@2x.png"
+          src="Screenshot_2024-02-27_154426-removebg-preview.png"
         />
       </section>
     </div>
