--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
               class="screenshot-2024-02-27-154947-r-icon"
               loading="lazy"
               alt=""
-              src="Screenshot-20240227-154947removebgpreview-1@2x.png"
+              src="Screenshot_2024-02-27_154947-removebg-preview.png"
             />
           </div>
           <img
             class="screenshot-2024-02-27-154951-r-icon"
             loading="lazy"
             alt=""
-            src="Screenshot-20240227-154951removebgpreview-1@2x.png"
+            src="Screenshot_2024-02-27_154951-removebg-preview.png"
           />
         </header>
         <div class="text">
